Work cleaning up the net code I guess, I honestly don't remember what I did.