@@ -14,8 +14,8 @@
         <lwjgl.version>3.3.3</lwjgl.version>
         <lwjgl.natives>natives-linux</lwjgl.natives>
 
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
     </properties>
 
 
@@ -211,9 +211,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>23</source>
+                    <target>23</target>
+                    <!--<compilerArgs>-enable-preview</compilerArgs>-->
                 </configuration>
             </plugin>
         </plugins>
